--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -3,10 +3,16 @@
     <head>
     <meta title="DOM">
     <meta content ="Document Object Model">
+    <link rel="stylesheet" href="dom.css">
     </head>
     <body>
     <h1 id ="hello-heading">
         Hello World!
     </h1>
+    <u1 id="fruits">
+    </u1>
+    <button  id ="action-btn"> click me</button>
+    <p id ="btn-status">Not clicked</p>
+    <script src="dom.js"></script>
     </body>
 </html>
